# onkyo-ctl

./: .gitignore  LICENSE.md  README.md  docker-compose.yaml  docker-compose.yml
.github/workflows/: go.yaml
onkyo-api/: Dockerfile  go.mod  main.go  pyproject.toml
onkyo-api/internal/: main.go
onkyo-api/internal/pkg/eiscp/: client.go
onkyo-api/onkyo_api/: config.py  main.py  utils.py
onkyo-app/onkyo-ctl Watch App/: ContentView.swift  OnkyoController.swift
onkyo-ctl/: Dockerfile  Makefile  go.mod  go.sum
onkyo-ctl/cmd/api/: main.go
onkyo-ctl/cmd/cli/: chat.go  main.go
onkyo-ctl/internal/pkg/eiscp/: client.go  packet.go
onkyo-ctl/onkyo-ctl Watch App/: ContentView.swift  OnkyoController.swift  onkyo_ctlApp.swift
onkyo-ctl/onkyo-ctl.xcodeproj/: project.pbxproj
onkyo-ctl/onkyo-ctl.xcodeproj/project.xcworkspace/xcuserdata/mtyszkiewicz.xcuserdatad/: UserInterfaceState.xcuserstate
onkyo-ctl/onkyo-ctl.xcodeproj/xcuserdata/mtyszkiewicz.xcuserdatad/xcschemes/: xcschememanagement.plist
